@@ -2,6 +2,10 @@ Changelog for CPAN-Testers-Schema
 
 {{ $NEXT }}
 
+    [Added]
+
+    - Added support for `since` in Stats resultset
+
 0.021     2017-11-28 13:43:34-06:00 America/Chicago
 
     - Implement support for `maturity` search param for Release queries.
